# hypertensor

./: CMakeLists.txt  README.md
include/: allocator.h  device.h  memoryPool.h  tensor.h
python/: CMakeLists.txt
python/bindings/: pybind.cpp
src/: allocator.cpp  cudaBackend.cu  memoryPool.cpp  tensor.cpp
